Start working on loading maps

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
 			<artifactId>intake</artifactId>
 			<version>3.1.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>2.0.0</version>
+        </dependency>
 	</dependencies>
 	<repositories>
 		<repository>
